    * Disabled Amazon cover provider because of revoked API key
    * Removed broken xine fader
    * Made chromeprint optional
    * Added missing names to about dialog
    * Made xine enabled only for window debug
    * Removed dead code
    * Added DSF and DSDIFF/DFF support
    * Fixed tagreader crash when saving tags to MP3 files
    * Added support for reading/writing lyrics to tags

Version 0.2.1:

    * Fixed crash with newer Qt
    * Fixed setting output/device for Xine and VLC backend
    * Improved backend settings to better support multiple backends
    * Fixed track slider for Xine, VLC and Phonon
    * Fixed compilation on MacOs
    * Fixed device selection on MacOs
    * Added xine on to windows build

Version 0.1.6:
    * Fixed crash on exit caused by NVIDIA driver
    * Fixed PulseAudio device selection
    * Improvements to device selection

Version 0.1.5:
    * Makefile fixes for building

Version 0.1.4:
    * Fixed compliation with clang compiler
    * This release is mainly to get it working on openbsd and freebsd.

Version 0.1.3:
    * Audio file detection by content
    * Added builtin taglib to 3rdparty to support detecting audio by content instead of just file extension
    * Removed unneeded bulitin qsqlite from 3rdparty
    * Added sqldrivers\qsqlite.dll for windows build
    * Replaced incorrect DLL libgstdirectsoundsink.dll (from gst 1.12.4) instead of libgstdirectsound.dll (from gst 1.14.0) for windows build
    * Fixed git versioning

Version 0.1.2:
    * Fixed playback of WavPack files
    * Fixed musicbrainz tagfetcher
    * Use common regex (Song::kCoverRemoveDisc) for removing Disc/CD from album
    * Remove Disc/CD from album when creating hash for album cover filename
    * Fixed imobiledevice support compilation
    * Fixed output device selection on windows
    * Fixed problems with windows build missing some DLL's, only supplying required gstreamer-plugins now
    * Removed redundant code

Version 0.1.1:
    * Initial release