@@ -22,6 +22,7 @@ Unreleased:
     * Added DSF and DSDIFF/DFF support
     * Fixed tagreader crash when saving tags to MP3 files
     * Added support for reading/writing lyrics to tags
+    * Fixed saving (APE) tags for WavPack files
 
 Version 0.2.1:
 
